# notes

./: .gitignore  .nojekyll  CNAME  README.md  _quarto.yml  about.html  chicago-author-date.csl  datadavev.bib  index.html  index.qmd  listings.json  package.json  pyproject.toml  robots.txt  search.json  sitemap.xml  styles.scss
posts/appscript/: index.html  index.qmd
posts/catching_rain/: index.qmd
posts/catching_rain/data/: precip_1.json  precip_10.json  precip_11.json  precip_12.json  precip_2.json  precip_3.json  precip_4.json  precip_5.json  precip_6.json  precip_7.json  precip_8.json  precip_9.json
posts/cesium/: imlgs_snapshot.html  imlgs_snapshot.qmd  million_points.html  million_points.qmd  si_snapshot.html  si_snapshot.qmd
posts/gravel/: index.html  index.qmd
posts/post-with-code/: index.qmd
posts/python_setup/: index.html  index.qmd
posts/welcome/: index.qmd
site_libs/bootstrap/: bootstrap-dark-41395fe64f2f9b09eddf437d954ed45a.min.css
site_libs/quarto-html/: quarto-syntax-highlighting-dark-29d6693e3bc00f0b929cbd7e83c16ae9.css
src/: index.html
