[project]
name = "notes-beehivebeach-com"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1",
    "duckdb>=1.3.1",
    "duckdb-appender>=0.3.1",
    "faker>=37.4.0",
    "itables>=2.3.0",
    "jupyterlab>=4.4.0",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "statsmodels>=0.14.4",
]
